declarative_imperatives/web-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.networking.k8s.io/v1","kind":"Gateway","metadata":{"annotations":{},"name":"web-gateway","namespace":"default"},"spec":{"gatewayClassName":"example-gateway-class","listeners":[{"name":"http","port":80,"protocol":"HTTP"}]}}
  creationTimestamp: "2026-01-04T20:45:10Z"
  generation: 1
  name: web-gateway
  namespace: default
  resourceVersion: "15906"
  uid: 94a158f7-6b13-4070-977e-05bb99eae25d
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: http
    port: 80
    protocol: HTTP
status:
  conditions:
  - lastTransitionTime: "1970-01-01T00:00:00Z"
    message: Waiting for controller
    reason: Pending
    status: Unknown
    type: Accepted
  - lastTransitionTime: "1970-01-01T00:00:00Z"
    message: Waiting for controller
    reason: Pending
    status: Unknown
    type: Programmed
